--- a/flagquiz/pubspec.yaml
+++ b/flagquiz/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  share: ^0.5.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,6 +44,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/background.jpg
+    - android/app/src/main/res/drawable/background.jpg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
